Background and text colors changed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <div class="card">
-            <h1>Currency Converter</h1>
+            <h1>CURRENCY CONVERTER</h1>
             <label id="amountLabel" for="amount">
                 <h2>Amount</h2>
                 <input type="number" name="amount" id="amount" value="1">
